# claude-x-codex

./: .gitignore  README.md
agentaudit/: CHANGELOG.md  README.md  pyproject.toml
agentaudit/examples/: anthropic-messages-bad.json  anthropic-messages-good.json  bad-transcript-cross-agent-injection.jsonl  bad-transcript-direct-dangerous-content.jsonl  bad-transcript-direct-encoded-content.jsonl  bad-transcript-direct-obfuscated-content.jsonl  bad-transcript-direct-selfmod.jsonl  bad-transcript-v030-selfmod.jsonl  bad-transcript.jsonl  good-transcript.jsonl  judge_demo.py  openai-agents-bad.json  openai-agents-fabricated-system.json  openai-agents-injection.json  openai-agents-wrapped-good.json  openai-response-envelope.json
agentaudit/recipes/: claude-code-pre-tool-use.sh  claude-code-user-prompt-submit.sh  openai_agents_hook.py
agentaudit/specs/: no-credential-store-write.md  no-cross-agent-injection.md  no-direct-credential-store-write.md  no-direct-dangerous-shell-content.md  no-direct-instruction-file-write-without-confirm.md  no-direct-runtime-config-write-without-confirm.md  no-instruction-file-write-without-confirm.md  no-network-exfil.md  no-pii-exfil.md  no-pkg-install-without-confirm.md  no-runtime-config-write-without-confirm.md  no-secret-leak.md  no-shell-without-confirm.md
agentaudit/tests/: test_anthropic_messages_adapter.py  test_bad_transcript_direct_dangerous_content.py  test_bad_transcript_direct_encoded_content.py  test_bad_transcript_direct_obfuscated_content.py  test_bad_transcript_direct_selfmod.py  test_bad_transcript_v030_selfmod.py  (+19 more)
(+37 files in other folders)
